# VE_linuxServer

./: .gitignore  AboutCurrentRobot.h  AccelerationDeceleration.cpp  AccelerationDeceleration.h  CMakeLists.txt  Eye.cpp  Eye.h  FaceDetector.cpp  FaceDetector.h  InverseForwardKinematicsModel.cpp  InverseForwardKinematicsModel.h  MotorController.cpp  MotorController.h  PixelToMotorStepsConverter.cpp  PixelToMotorStepsConverter.h  README.md  RobotSystem.cpp  RobotSystem.h  ServerController.cpp  ServerController.h  VoiceController.cpp  VoiceController.h  WebServer.cpp  WebServer.h  drogon_config copy.json  main copy.cpp  main.cpp  protocol.hpp  serialController.h  tcpServer copy.cpp  tcpServer.cpp  tcpServer.h
backend/: Api.cpp
backend/templates/: controlPage.csp  guidePage.csp  infoPage.csp
configs/: webConfig.json
content/: jsscript.js  main_style.css
