cmake_minimum_required(VERSION 3.0.0)
project(server VERSION 0.1.0)

include(CTest)
enable_testing()
# Enable C++11
# set(CMAKE_CXX_STANDARD 11)
# set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
#tcpServer.cpp
add_executable(server main.cpp PixelToMotorStepsConverter.cpp FaceDetector.cpp RobotSystem.cpp ServerController.cpp MotorController.cpp VoiceController.cpp Eye.cpp FaceDetector.cpp InverseForwardKinematicsModel.cpp Eye.cpp protocol.hpp)
target_link_libraries(server -I/usr/include -lpthread -lboost_system -lwiringPi)
include_directories(-I/usr/include)
include_directories(-I/usr/include)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
include_directories(-I${PROJECT_SOURCE_DIR})
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
find_package(Eigen3 REQUIRED)
link_directories(${Eigen_INCLUDE_DIRS})
set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED ON)  
set(Boost_USE_STATIC_RUNTIME OFF) 
# find_package(Boost 1.45.0 COMPONENTS system ) 
FIND_PACKAGE( Boost 1.60 COMPONENTS system thread REQUIRED )
cmake_minimum_required(VERSION 3.1)

SET(OpenCV_DIR /home/pi/Desktop/installation/OpenCV-4.7.0/lib/cmake/opencv4)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
target_link_libraries( server ${OpenCV_LIBS} Eigen3::Eigen ${Eigen_LIBRARIES})

if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS}) 
    target_link_libraries(server ${Boost_LIBRARIES})
endif()
